--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>SNIPER BLAZE — Neural Trader</title>
+<title>SPECTRA X — IA de Sinais</title>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&display=swap" rel="stylesheet">
 <style>
@@ -47,11 +47,11 @@ body{
 .badge.warn{border-color:rgba(245,158,11,.35);background:rgba(245,158,11,.15)}
 .badge.bad{border-color:rgba(239,68,68,.35);background:rgba(239,68,68,.15)}
 
-/* Painel IA */
+/* Painel IA central */
 .neural-banner{display:grid;grid-template-columns:1fr 1fr;gap:18px;align-items:stretch;
   border:1px solid var(--stroke);border-radius:18px;padding:16px;
   background:linear-gradient(180deg, rgba(159,91,255,.07), rgba(0,0,0,0));position:relative}
-.header-line{display:flex;gap:10px;align-items:center;margin-bottom:8px}
+.header-line{display:flex;gap:10px;align-items:center;margin-bottom:8px;flex-wrap:wrap}
 .q-badge{padding:4px 10px;border-radius:999px;border:1px solid var(--stroke);background:rgba(21,21,38,.7);font-weight:800}
 .q-badge.good{background:rgba(34,197,94,.12);border-color:rgba(34,197,94,.35)}
 .q-badge.mid{background:rgba(245,158,11,.12);border-color:rgba(245,158,11,.35)}
@@ -61,7 +61,7 @@ body{
 .left{display:grid;place-items:center}
 .brain{width:100%;max-width:320px;aspect-ratio:1/1;border-radius:50%;display:grid;place-items:center;position:relative}
 
-/* Anel */
+/* Anel do estado */
 .ring{
   position:absolute;inset:7.5%;border-radius:50%;
   background:conic-gradient(from 90deg,#60a5fa,#a78bfa,#60a5fa,#a78bfa 98%,#60a5fa);
@@ -99,13 +99,23 @@ body{
 .table td:last-child{border-radius:0 10px 10px 0}
 .pl-pos{color:#7ee787;font-weight:800}
 .pl-neg{color:#ff7b72;font-weight:800}
+
+/* Coach */
+.coach{display:grid;gap:10px}
+.card{background:rgba(21,21,38,.7);border:1px solid var(--stroke);border-radius:12px;padding:12px}
+.card h3{margin:0 0 6px 0;font-size:14px;color:var(--muted);font-weight:700}
+.kv{display:flex;gap:8px;flex-wrap:wrap}
+.kv .tag{padding:6px 10px;border-radius:999px;border:1px solid var(--stroke);background:rgba(21,21,38,.7);font-weight:800}
+.tag.bad{border-color:rgba(239,68,68,.35);background:rgba(239,68,68,.15)}
+.tag.warn{border-color:rgba(245,158,11,.35);background:rgba(245,158,11,.15)}
+.tag.ok{border-color:rgba(34,197,94,.35);background:rgba(34,197,94,.15)}
 </style>
 </head>
 <body>
 <div class="wrap">
   <div class="panel">
     <div class="topbar">
-      <h1>SNIPER BLAZE</h1>
+      <h1>SPECTRA X — IA de Sinais</h1>
       <div class="summary">
         <span class="pill" id="state-pill">OFFLINE • —</span>
         <div class="seg">
@@ -130,6 +140,7 @@ body{
         <div class="left">
           <div class="header-line">
             <span id="quality-badge" class="q-badge">Qualidade —</span>
+            <span id="market-badge" class="q-badge">Mercado —</span>
             <span id="round-timer" class="timer">--:--</span>
           </div>
           <div class="brain">
@@ -143,10 +154,10 @@ body{
         </div>
 
         <div class="right">
-          <div class="item"><div class="item-title">Estratégia</div><div class="item-value" id="meta-strategy">—</div></div>
+          <div class="item"><div class="item-title">IA — Recomendação</div><div class="item-value" id="meta-rec">—</div></div>
+          <div class="item"><div class="item-title">Alvo atual</div><div class="item-value" id="meta-target">—</div></div>
           <div class="item"><div class="item-title">Confluência</div><div class="item-value" id="meta-conf">—</div></div>
           <div class="item"><div class="item-title">Gales</div><div class="item-value" id="gales-max">—</div></div>
-          <div class="item"><div class="item-title">Status</div><div class="item-value" id="meta-rec">—</div></div>
         </div>
       </div>
     </div>
@@ -157,30 +168,55 @@ body{
     </div>
 
     <div class="panel">
-      <div class="title"><strong>Estatísticas por estratégia</strong></div>
-      <table class="table" id="stat-table">
-        <thead><tr>
-          <th>Estratégia</th><th>Entradas</th><th>WIN</th><th>LOSS</th><th>Assert.</th><th>P/L (sim.)</th>
-        </tr></thead>
-        <tbody></tbody>
-      </table>
+      <div class="title"><strong>Coach & Saúde</strong></div>
+      <div class="coach">
+        <div class="card">
+          <h3>Resumo</h3>
+          <div class="kv">
+            <span class="tag" id="tag-winrate">Winrate 60: —</span>
+            <span class="tag" id="tag-entropy">Entropia: —</span>
+            <span class="tag" id="tag-market">Mercado: —</span>
+          </div>
+        </div>
+        <div class="card">
+          <h3>Dicas</h3>
+          <div id="coach-msg">Aguardando leituras da IA…</div>
+        </div>
+      </div>
     </div>
+  </div>
+
+  <div class="panel" style="margin-top:14px">
+    <div class="title"><strong>Estatísticas por estratégia</strong></div>
+    <table class="table" id="stat-table">
+      <thead><tr>
+        <th>Estratégia</th><th>Entradas</th><th>WIN</th><th>LOSS</th><th>Assert.</th><th>P/L (sim.)</th>
+      </tr></thead>
+      <tbody></tbody>
+    </table>
   </div>
 </div>
 
 <script>
-// ========= CONFIG API =========
-// usa a URL salva ou cai para a origem atual
 const API = (localStorage.getItem('API_BASE') || location.origin).replace(/\/+$/,'');
 const $ = s => document.querySelector(s);
 
 let lastHistLen=0,lastSpinAt=Date.now(),spinMs=12000,hadOpen=false,lastMode='CORES';
 
-setInterval(()=>{const el=$('#round-timer');if(!el)return;const now=Date.now(),remain=Math.max(0,lastSpinAt+spinMs-now);const sec=Math.ceil(remain/1000),mm=Math.floor(sec/60),ss=(sec%60).toString().padStart(2,'0');el.textContent=`${mm}:${ss}`;},250);
+setInterval(()=>{
+  const el=$('#round-timer'); if(!el) return;
+  const now=Date.now(),remain=Math.max(0,lastSpinAt+spinMs-now);
+  const sec=Math.ceil(remain/1000),mm=Math.floor(sec/60),ss=(sec%60).toString().padStart(2,'0');
+  el.textContent=`${mm}:${ss}`;
+},250);
 
-function setActiveModeButton(m){const c=$('#mode-cores'),b=$('#mode-branco');if(m==='CORES'){c.classList.add('active');b.classList.remove('active');}else{b.classList.add('active');c.classList.remove('active');}lastMode=m;}
+function setActiveModeButton(m){
+  const c=$('#mode-cores'),b=$('#mode-branco');
+  if(m==='CORES'){c.classList.add('active');b.classList.remove('active');}
+  else{b.classList.add('active');c.classList.remove('active');}
+  lastMode=m;
+}
 
-// Configurar endpoint do backend
 document.getElementById('btn-api').onclick = () => {
   const cur = localStorage.getItem('API_BASE') || location.origin;
   const val = prompt('URL do backend (ex: http://127.0.0.1:5000 ou https://seu-tunel.ngrok.app)', cur);
@@ -189,11 +225,9 @@ document.getElementById('btn-api').onclick = () => {
   location.reload();
 };
 
-// Troca de modo
 $('#mode-cores').onclick=()=>fetch(API+'/control',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({mode:'CORES'})}).then(()=>setActiveModeButton('CORES')).catch(e=>alert('Erro ao setar modo CORES: '+e));
 $('#mode-branco').onclick=()=>fetch(API+'/control',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({mode:'BRANCO'})}).then(()=>setActiveModeButton('BRANCO')).catch(e=>alert('Erro ao setar modo BRANCO: '+e));
 
-// Iniciar / Parar com alerta de erro
 document.getElementById('btn-start').onclick = async () => {
   try{
     const r=await fetch(API+'/control',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({bot_on:true})});
@@ -209,28 +243,83 @@ document.getElementById('btn-stop').onclick = async () => {
   }catch(e){ alert('Falha ao parar: '+e.message+'\nAPI='+API+'/control'); }
 };
 
-function ball(n){if(n===0)return`<div class="ball W">0</div>`;const c=(n>=1&&n<=7)?'R':'B';return`<div class="ball ${c}">${n}</div>`;}
-function setTargetVisual(t){const d=$('#tgt-disc');d.className='disc';if(t==='W')d.classList.add('white');else if(t==='R')d.classList.add('red');else if(t==='B')d.classList.add('black');}
-function computeQuality(o,p){const c=o?.confluence??0,m=o?.max_gales??0,pr=Number(p?.rec?.p||0);let s=(pr*0.6)+(c*6)-(m*8);s=Math.max(0,Math.min(100,Math.round(s)));const l=s>=70?'Alta':s>=45?'Média':'Baixa';return{score:s,label:l};}
-function setQualityBadge(q){const el=$('#quality-badge');el.className='q-badge '+(q.score>=70?'good':q.score>=45?'mid':'low');el.textContent=`Qualidade: ${q.label} • ${q.score}%`;}
-function setGalesMax(o){const el=$('#gales-max');if(!o){el.textContent='—';return;}const m=o.max_gales||0;el.textContent=m===1?'até 1 gale':`até ${m} gales`;}
-function open_trade_type(t){return t?.type||null;}
+function ball(n){
+  if(n===0) return `<div class="ball W">0</div>`;
+  const c=(n>=1&&n<=7)?'R':'B';
+  return `<div class="ball ${c}">${n}</div>`;
+}
+function ballStrip(seq){return (seq||[]).slice(-14).map(n=>ball(n)).join('');}
+
+function setTargetVisual(t){
+  const d=$('#tgt-disc'); d.className='disc';
+  if(t==='W') d.classList.add('white');
+  else if(t==='R') d.classList.add('red');
+  else if(t==='B') d.classList.add('black');
+}
+function computeQuality(o,p){
+  const c=o?.confluence??0,m=o?.max_gales??0,pr=Number(p?.rec?.p||0);
+  let s=(pr*0.6)+(c*6)-(m*8);
+  s=Math.max(0,Math.min(100,Math.round(s)));
+  const l=s>=70?'Alta':s>=45?'Média':'Baixa';
+  return{score:s,label:l};
+}
+function setQualityBadge(q){
+  const el=$('#quality-badge');
+  el.className='q-badge '+(q.score>=70?'good':q.score>=45?'mid':'low');
+  el.textContent=`Qualidade: ${q.label} • ${q.score}%`;
+}
+function setMarketBadge(j){
+  const el=$('#market-badge');
+  if(j.market_bad){ el.className='q-badge low'; el.textContent='Mercado: Ruim'; }
+  else{ el.className='q-badge good'; el.textContent='Mercado: OK'; }
+}
+function setGalesMax(o){
+  const el=$('#gales-max');
+  if(!o){el.textContent='—';return;}
+  const m=o.max_gales||0; el.textContent=m===1?'até 1 gale':`até ${m} gales`;
+}
 function showPct(f){$('#banner-pct').classList.toggle('show',!!f);}
 function showAwait(flag){$('#await-label').classList.toggle('show',!!flag);}
 
-function resetSignalUI(){const d=$('#tgt-disc');d.className='disc';$('#banner-pct').textContent='—%';showPct(false);$('#meta-strategy').textContent='—';$('#meta-conf').textContent='—';$('#gales-max').textContent='—';$('#meta-rec').textContent='—';const q=$('#quality-badge');q.className='q-badge';q.textContent='Qualidade —';$('#ring').className='ring ring--idle';showAwait(true);}
-function hardResetUI(txt){resetSignalUI();$('#state-pill').textContent=txt??$('#state-pill').textContent;}
+function resetSignalUI(){
+  const d=$('#tgt-disc'); d.className='disc';
+  $('#banner-pct').textContent='—%'; showPct(false);
+  $('#meta-target').textContent='—'; $('#meta-conf').textContent='—';
+  $('#gales-max').textContent='—'; $('#meta-rec').textContent='—';
+  const q=$('#quality-badge'); q.className='q-badge'; q.textContent='Qualidade —';
+  $('#ring').className='ring ring--idle'; showAwait(true);
+}
+function hardResetUI(txt){ resetSignalUI(); $('#state-pill').textContent=txt??$('#state-pill').textContent; }
 
-function setBannerFrom(o,p){if(!o){resetSignalUI();return;}showAwait(false);const t=o.target,pct=Number(p?.rec?.p||0);setTargetVisual(t);$('#banner-pct').textContent=`${Math.round(pct*10)/10}%`;showPct(true);$('#meta-conf').textContent=o.confluence??'—';const estr=open_trade_type(o)==='white'?'Estratégia 1':open_trade_type(o)==='color'?'Estratégia 2':'—';$('#meta-strategy').textContent=estr;setGalesMax(o);}
-function setPhase(o,p){const r=$('#ring');if(!o){resetSignalUI();return;}showAwait(false);if(o.phase==='analyzing'){r.className='ring ring--spin';$('#meta-rec').textContent=`Analisando • ${Math.round((p?.rec?.p||0)*10)/10}%`;return;}const g=o.step||0,m=o.max_gales||0;setGalesMax(o);if(g===0){r.className='ring ring--open';$('#meta-rec').textContent=`Sinal ativo • G0 (até ${m})`;}else{r.className='ring ring--gale';$('#meta-rec').textContent=`Sinal ativo • GALE ${g}/${m}`;}}
+function setBannerFrom(o,p){
+  if(!o){ resetSignalUI(); return; }
+  showAwait(false);
+  const t=o.target, pct=Number(p?.rec?.p||0);
+  setTargetVisual(t);
+  $('#banner-pct').textContent=`${Math.round(pct*10)/10}%`; showPct(true);
+  $('#meta-target').textContent=({W:'BRANCO',R:'VERMELHO',B:'PRETO'})[t]||'—';
+  $('#meta-conf').textContent=o.confluence??'—';
+  setGalesMax(o);
+}
+function setPhase(o,p){
+  const r=$('#ring'); if(!o){ resetSignalUI(); return; }
+  showAwait(false);
+  if(o.phase==='analyzing'){
+    r.className='ring ring--spin';
+    $('#meta-rec').textContent=`Analisando • ${Math.round((p?.rec?.p||0)*10)/10}%`;
+    return;
+  }
+  const g=o.step||0,m=o.max_gales||0; setGalesMax(o);
+  if(g===0){ r.className='ring ring--open'; $('#meta-rec').textContent=`Sinal ativo • G0 (até ${m})`; }
+  else{ r.className='ring ring--gale'; $('#meta-rec').textContent=`Sinal ativo • GALE ${g}/${m}`; }
+}
 
 function updateHealth(j){
   $('#data-src').textContent = `Fonte: ${j.data_source||'—'}`;
   const lat = (j.latency_ms!=null)? `${j.latency_ms} ms` : '—';
   const sec = (j.seconds_since_last!=null)? `${j.seconds_since_last.toFixed(1)}s` : '—';
   const lb = $('#lat-badge'); lb.textContent = `Latência ${lat} • Último ${sec}`;
-  const live = $('#live-badge');
-  live.textContent = j.live_ok? 'Live OK' : 'Atraso na fonte';
+  const live = $('#live-badge'); live.textContent = j.live_ok? 'Live OK' : 'Atraso na fonte';
   live.className = 'badge ' + (j.live_ok ? 'ok' : 'warn');
 }
 
@@ -239,38 +328,54 @@ function renderStats(stats){
   const rows = Object.entries(stats||{}).map(([name,v])=>{
     const plClass = (v.pl_sim>=0)?'pl-pos':'pl-neg';
     return `<tr>
-      <td>${name}</td>
-      <td>${v.entries}</td>
-      <td>${v.win}</td>
-      <td>${v.loss}</td>
-      <td>${v.assert}%</td>
-      <td class="${plClass}">${v.pl_sim}</td>
+      <td>${name}</td><td>${v.entries}</td><td>${v.win}</td><td>${v.loss}</td>
+      <td>${v.assert}%</td><td class="${plClass}">${v.pl_sim}</td>
     </tr>`;
   }).join('');
   tb.innerHTML = rows || `<tr><td colspan="6" style="color:var(--muted);text-align:center">Sem dados ainda</td></tr>`;
 }
 
-function ball(n){if(n===0)return`<div class="ball W">0</div>`;const c=(n>=1&&n<=7)?'R':'B';return`<div class="ball ${c}">${n}</div>`;}
-function ballStrip(seq){return (seq||[]).slice(-14).map(n=>ball(n)).join('');}
+function coachUpdate(j){
+  const wr = j.winrate_60;
+  const bad = j.market_bad;
+  const ent = (j.entropia_alta===true) ? 'Alta' : (j.entropia_alta===false ? 'Ok' : '—');
+  const tWr = $('#tag-winrate'); tWr.textContent = `Winrate 60: ${wr!=null?(wr*100).toFixed(1)+'%':'—'}`;
+  tWr.className = 'tag '+(wr!=null?(wr>=0.55?'ok':wr>=0.48?'warn':'bad'):'');
+  const tEn = $('#tag-entropy'); tEn.textContent = `Entropia: ${ent}`;
+  tEn.className = 'tag '+(ent==='Alta'?'warn':'ok');
+  const tMk = $('#tag-market'); tMk.textContent = `Mercado: ${bad?'Ruim':'OK'}`;
+  tMk.className = 'tag '+(bad?'bad':'ok');
+
+  const coach = $('#coach-msg');
+  if(bad){ coach.textContent = '⚠️ Mercado indeciso/ruim. Recomendo pausar e aguardar 8–12 giros estáveis.'; }
+  else if(wr!=null && wr<0.5){ coach.textContent = 'Cautela: Winrate abaixo de 50%. Reduza stake temporariamente.'; }
+  else{ coach.textContent = '🎯 Cenário estável. Aguarde confluência adequada e latência OK.'; }
+}
 
 async function tick(){
   try{
     const r=await fetch(API+'/state');
     if(!r.ok) throw new Error('HTTP '+r.status);
     const j=await r.json();
+
     $('#state-pill').textContent=`${j.bot_on?'ONLINE':'OFFLINE'} • ${j.mode}`;
     setActiveModeButton(j.mode);
     updateHealth(j);
     renderStats(j.strategy_stats||{});
+    setMarketBadge(j);
 
     const seq=j.last_50||[]; $('#rolls').innerHTML=ballStrip(seq);
-    if(seq.length>lastHistLen){const now=Date.now();const dt=now-lastSpinAt;if(dt>1000&&dt<40000){spinMs=0.7*spinMs+0.3*dt;}lastSpinAt=now;lastHistLen=seq.length;}
+    if(seq.length>lastHistLen){
+      const now=Date.now(),dt=now-lastSpinAt;
+      if(dt>1000&&dt<40000){spinMs=0.7*spinMs+0.3*dt;}
+      lastSpinAt=now; lastHistLen=seq.length;
+    }
 
     const currOpen=!!j.open_trade;
     if(hadOpen && !currOpen){ hardResetUI(`${j.bot_on?'ONLINE':'OFFLINE'} • ${j.mode}`); }
     hadOpen=currOpen;
 
-    if(!j.bot_on){ hardResetUI(`OFFLINE • ${j.mode}`); return setTimeout(tick,900); }
+    if(!j.bot_on){ hardResetUI(`OFFLINE • ${j.mode}`); setTimeout(tick,1000); return; }
 
     const p={rec:{tgt:j.probs.rec.tgt,p:j.probs.rec.p}};
     if(j.open_trade){
@@ -279,6 +384,16 @@ async function tick(){
       const q=computeQuality(j.open_trade,p); setQualityBadge(q);
     }else{
       resetSignalUI();
+    }
+
+    // Coach & saúde extra
+    const s=await fetch(API+'/stats').then(r=>r.json()).catch(()=>null);
+    if(s && s.ok!==false){
+      coachUpdate({
+        winrate_60: s.winrate_60,
+        entropia_alta: s.entropia_alta,
+        market_bad: s.mercado_ruim
+      });
     }
   }catch(e){
     console.error(e);
@@ -291,7 +406,7 @@ async function tick(){
   }
 }
 
-function clearOnFirstLoad(){$('#rolls').innerHTML='';resetSignalUI();}
+function clearOnFirstLoad(){ $('#rolls').innerHTML=''; resetSignalUI(); }
 clearOnFirstLoad(); tick();
 </script>
 </body>
